actualizacion pag y .gitignore

--- a/Sites/templates/footer.html
+++ b/Sites/templates/footer.html
@@ -1,8 +1,69 @@
-<br>
-<br>
-<form action="../index.php" method="get">
-    <input type="submit" value="Volver">
-</form>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    
+    <body id="page-top">
+       
+        
+        <!-- Registrar-->
+        
+       
+        <!-- Team-->
+        <section class="page-section bg-light" id="equipo">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Equipo</h2>
+                    <h3 class="section-subheading text-muted">Sobre nosotros.</h3>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpeg" alt="" />
+                            <h4>Frodo</h4>
+                            <p class="text-muted">Frodo</p>
+                    
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
+                            <h4>Juangui</h4>
+                            <p class="text-muted">Juangui</p>
+                            
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpeg" alt="" />
+                            <h4>Titi</h4>
+                            <p class="text-muted">Titi</p>
+        
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/4.jpeg" alt="" />
+                            <h4>Vicente</h4>
+                            <p class="text-muted">Vicente</p>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Equipo</p></div>
+                </div>
+            </div>
+        </section>
+        
+
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Contact form JS-->
+        <script src="assets/mail/jqBootstrapValidation.js"></script>
+        <script src="assets/mail/contact_me.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
